--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
         <div class="content-one-section">
             <div class="content-one-top"><h2>Some random information.</h2></div>
             <div class="content-one-bottom">
-                <div class="card">
-                    <img src="" alt="">
+                <div>
+                    <img class="card" src="grey.jpg" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div class="card">
-                    <img src="" alt="">
+                <div>
+                    <img class="card" src="grey.jpg" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div class="card">
-                    <img src="" alt="">
+                <div>
+                    <img class="card" src="grey.jpg" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div class="card">
-                    <img src="" alt="">
+                <div>
+                    <img class="card" src="grey.jpg" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>            
             </div>       
