Completes content-three and footer

--- a/index.html
+++ b/index.html
@@ -85,16 +85,14 @@
         
 
     <div class="content3">
-        <div class="content3-container">
-            <div class="content3-sect1">
+        <div class="content3-container">            
                 <div class="content3-sect1a">
                     <h4>Call to action! It's time!</h4>
                     <p>Sign up for our product by clicking that buutton right over there!</p>
                 </div>
                 <div class="content3-sect1b">
-                    <button>Sign up</button>
-                </div>
-            </div>
+                    <button class="cta-button">Sign up</button>
+                </div>            
         </div>        
     </div>
 
